# Rosetta

./: .gitignore  Cargo.toml  README.md  RESUMEN_ROSETTA.txt
.github/workflows/: ci.yml  release.yml
crates/rosetta-ada/: Cargo.toml
crates/rosetta-ada/src/: lib.rs
crates/rosetta-algol/: Cargo.toml
crates/rosetta-algol/src/: lib.rs
crates/rosetta-apl/: Cargo.toml
crates/rosetta-apl/src/: lib.rs
crates/rosetta-c/: Cargo.toml
crates/rosetta-c/src/: lib.rs
crates/rosetta-cli/: Cargo.toml
crates/rosetta-cli/src/: main.rs
crates/rosetta-clips/: Cargo.toml
crates/rosetta-clips/src/: lib.rs
crates/rosetta-cobol/: Cargo.toml
crates/rosetta-cobol/src/: lib.rs
crates/rosetta-codegen/: Cargo.toml
crates/rosetta-codegen/src/: lib.rs
crates/rosetta-core/: Cargo.toml
crates/rosetta-core/src/: lib.rs
crates/rosetta-docs/: Cargo.toml
crates/rosetta-docs/src/: lib.rs
crates/rosetta-forth/: Cargo.toml
crates/rosetta-forth/src/: lib.rs
crates/rosetta-fortran/: Cargo.toml
crates/rosetta-fortran/src/: lib.rs
crates/rosetta-gui/: Cargo.toml
crates/rosetta-gui/src/: main.rs
crates/rosetta-ir/: Cargo.toml
crates/rosetta-ir/src/: lib.rs
crates/rosetta-krl/: Cargo.toml
crates/rosetta-krl/src/: lib.rs
crates/rosetta-lisp/: Cargo.toml
crates/rosetta-lisp/src/: lib.rs
crates/rosetta-ml/: Cargo.toml
crates/rosetta-ml/src/: lib.rs
crates/rosetta-modula2/: Cargo.toml
crates/rosetta-modula2/src/: lib.rs
crates/rosetta-mumps/: Cargo.toml
crates/rosetta-mumps/src/: lib.rs
crates/rosetta-ops5/: Cargo.toml
crates/rosetta-ops5/src/: lib.rs
crates/rosetta-pascal/: Cargo.toml
crates/rosetta-pascal/src/: lib.rs
crates/rosetta-planner/: Cargo.toml
crates/rosetta-planner/src/: lib.rs
crates/rosetta-pli/: Cargo.toml
crates/rosetta-pli/src/: lib.rs
crates/rosetta-prolog/: Cargo.toml
crates/rosetta-prolog/src/: lib.rs
crates/rosetta-quickbasic/: Cargo.toml
crates/rosetta-quickbasic/src/: lib.rs
crates/rosetta-rexx/: Cargo.toml
crates/rosetta-rexx/src/: lib.rs
crates/rosetta-rpg/: Cargo.toml
crates/rosetta-rpg/src/: lib.rs
crates/rosetta-simula/: Cargo.toml
crates/rosetta-simula/src/: lib.rs
crates/rosetta-smalltalk/: Cargo.toml
crates/rosetta-smalltalk/src/: lib.rs
crates/rosetta-snobol/: Cargo.toml
crates/rosetta-snobol/src/: lib.rs
crates/rosetta-validator/: Cargo.toml
crates/rosetta-validator/src/: lib.rs
crates/rosetta-wasm/: Cargo.toml
crates/rosetta-wasm/src/: lib.rs
rosetta-vscode/: README.md  language-configuration.json  lisp-configuration.json  package.json
rosetta-vscode/src/: extension.ts
rosetta-vscode/syntaxes/: cobol.tmLanguage.json  fortran.tmLanguage.json  lisp.tmLanguage.json  mumps.tmLanguage.json  pascal.tmLanguage.json
