[workspace]
resolver = "2"
members = [
    # Core transpiler infrastructure
    "crates/rosetta-core",       # Common types, IR, traits
    "crates/rosetta-ir",         # Intermediate Representation
    "crates/rosetta-codegen",    # Rust code generation
    "crates/rosetta-c",          # C code generation
    "crates/rosetta-wasm",       # WebAssembly code generation

    # Frontend parsers (legacy languages)
    "crates/rosetta-fortran",    # FORTRAN 77/90/95/2003/2008
    "crates/rosetta-cobol",      # COBOL
    "crates/rosetta-pli",        # PL/I (1964, IBM)
    "crates/rosetta-lisp",       # Common Lisp / Scheme
    "crates/rosetta-quickbasic", # QuickBASIC / QBASIC
    "crates/rosetta-ml",         # Standard ML / OCaml

    # Business/Healthcare/Mainframe critical
    "crates/rosetta-mumps",      # MUMPS/M (1966, healthcare - Epic, VistA)
    "crates/rosetta-rpg",        # RPG (1959, IBM AS/400)
    "crates/rosetta-rexx",       # REXX (1979, IBM mainframe scripting)

    # Structured/Educational languages
    "crates/rosetta-pascal",     # Pascal (Turbo, Free Pascal, Delphi)
    "crates/rosetta-algol",      # ALGOL 60/68
    "crates/rosetta-modula2",    # Modula-2 (1978, Wirth)

    # Systems programming
    "crates/rosetta-ada",        # Ada 83/95/2005/2012

    # Array processing
    "crates/rosetta-apl",        # APL (1966, Iverson)

    # String processing
    "crates/rosetta-snobol",     # SNOBOL4 (1962, Bell Labs)

    # Object-oriented (historical)
    "crates/rosetta-simula",     # Simula 67 (first OOP language)
    "crates/rosetta-smalltalk",  # Smalltalk-80 (1972, Xerox PARC)

    # Stack-based/Concatenative
    "crates/rosetta-forth",      # Forth (1970, Charles Moore)

    # Symbolic AI frontends (1970s-1980s paradigms)
    "crates/rosetta-planner",    # PLANNER (1969, MIT) - Pattern-directed invocation
    "crates/rosetta-ops5",       # OPS5 (1981, CMU) - Production systems
    "crates/rosetta-krl",        # KRL (1977, Xerox PARC) - Frame-based knowledge
    "crates/rosetta-prolog",     # Prolog - Logic programming
    "crates/rosetta-clips",      # CLIPS (1985, NASA) - Expert systems

    # Additional tools
    "crates/rosetta-cli",        # Command-line interface
    "crates/rosetta-validator",  # Numerical equivalence testing
    "crates/rosetta-gui",        # GUI for transpilation
    "crates/rosetta-docs",       # Documentation generator
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Francisco Molina <pako.molina@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yatrogenesis/Rosetta"
keywords = ["transpiler", "fortran", "cobol", "lisp", "rust", "prolog", "planner"]
categories = ["development-tools", "parsing", "compilers"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Parsing
logos = "0.14"           # Lexer generator
pest = "2.7"             # PEG parser
pest_derive = "2.7"
nom = "7.1"              # Parser combinators
tree-sitter = "0.24"     # Incremental parsing

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
prettyplease = "0.2"     # Rust code formatting

# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["syntect"] }
syntect = "5.2"
rfd = "0.15"             # File dialogs

# Testing
approx = "0.5"
proptest = "1.5"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async (for web service)
tokio = { version = "1.41", features = ["full"] }

# Internal
rosetta-core = { path = "crates/rosetta-core" }
rosetta-ir = { path = "crates/rosetta-ir" }
rosetta-codegen = { path = "crates/rosetta-codegen" }
rosetta-fortran = { path = "crates/rosetta-fortran" }
rosetta-cobol = { path = "crates/rosetta-cobol" }
rosetta-lisp = { path = "crates/rosetta-lisp" }
rosetta-quickbasic = { path = "crates/rosetta-quickbasic" }
rosetta-ml = { path = "crates/rosetta-ml" }
rosetta-planner = { path = "crates/rosetta-planner" }
rosetta-ops5 = { path = "crates/rosetta-ops5" }
rosetta-krl = { path = "crates/rosetta-krl" }
rosetta-prolog = { path = "crates/rosetta-prolog" }
rosetta-validator = { path = "crates/rosetta-validator" }
rosetta-c = { path = "crates/rosetta-c" }
rosetta-wasm = { path = "crates/rosetta-wasm" }
rosetta-docs = { path = "crates/rosetta-docs" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
