[package]
name = "rosetta-algol"
version = "0.1.0"
edition = "2021"
description = "ALGOL 60/68 language frontend for Rosetta transpiler"
license = "MIT"

[dependencies]
rosetta-core = { path = "../rosetta-core" }
rosetta-ir = { path = "../rosetta-ir" }
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
