[package]
name = "rosetta-c"
version.workspace = true
edition.workspace = true
description = "C code generation backend for Rosetta transpiler"
keywords = ["c", "codegen", "transpiler", "backend"]
categories = ["development-tools", "compilers"]

[dependencies]
rosetta-core.workspace = true
rosetta-ir.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
