[package]
name = "rosetta-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust code generation from Rosetta IR"

[dependencies]
rosetta-core = { workspace = true }
rosetta-ir = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
prettyplease = { workspace = true }
thiserror = { workspace = true }
