[package]
name = "rosetta-krl"
version.workspace = true
edition.workspace = true
description = "KRL (Knowledge Representation Language) frontend for Rosetta transpiler"
keywords = ["krl", "ai", "knowledge-representation", "transpiler"]

[dependencies]
rosetta-core = { workspace = true }
rosetta-ir = { workspace = true }
logos = { workspace = true }
thiserror = { workspace = true }
