[package]
name = "rosetta-modula2"
version.workspace = true
edition.workspace = true
description = "Modula-2 language frontend for Rosetta transpiler"
keywords = ["modula-2", "wirth", "parser", "transpiler", "structured"]
categories = ["development-tools", "parsing", "compilers"]

[dependencies]
rosetta-core.workspace = true
rosetta-ir.workspace = true
logos.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
