[package]
name = "rosetta-mumps"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MUMPS/M language frontend for Rosetta transpiler"
keywords = ["mumps", "m", "healthcare", "vista", "epic"]

[dependencies]
rosetta-core.workspace = true
rosetta-ir.workspace = true
logos.workspace = true
serde.workspace = true
thiserror.workspace = true
