[package]
name = "rosetta-ops5"
version.workspace = true
edition.workspace = true
description = "OPS5 production system frontend for Rosetta transpiler"
keywords = ["ops5", "ai", "production-system", "transpiler"]

[dependencies]
rosetta-core = { workspace = true }
rosetta-ir = { workspace = true }
logos = { workspace = true }
thiserror = { workspace = true }
