[package]
name = "rosetta-rpg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "RPG (Report Program Generator) frontend for Rosetta transpiler"
keywords = ["rpg", "ibm", "as400", "iseries", "mainframe"]

[dependencies]
rosetta-core.workspace = true
rosetta-ir.workspace = true
logos.workspace = true
serde.workspace = true
thiserror.workspace = true
