[package]
name = "rosetta-simula"
version = "0.1.0"
edition = "2021"
description = "Simula 67 language frontend for Rosetta transpiler (first OOP language)"
license = "MIT"

[dependencies]
rosetta-core = { path = "../rosetta-core" }
rosetta-ir = { path = "../rosetta-ir" }
logos = "0.14"
serde = { version = "1.0", features = ["derive"] }
