[package]
name = "rosetta-wasm"
version.workspace = true
edition.workspace = true
description = "WebAssembly code generation backend for Rosetta transpiler"
keywords = ["wasm", "webassembly", "codegen", "transpiler", "backend"]
categories = ["development-tools", "compilers", "wasm"]

[dependencies]
rosetta-core.workspace = true
rosetta-ir.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
